# Ant-Hill

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
config/: default.toml  developer.toml  enterprise.toml
core/bus/: Cargo.toml
core/bus/src/: channel.rs  lib.rs  replay.rs
core/common/: build.rs
core/common/src/: config.rs  lib.rs  types.rs
core/common/src/proto/: mod.rs
core/db/: Cargo.toml
core/protocol/: anthill.proto
crates/anthill-agents/: Cargo.toml
crates/anthill-agents/src/: lib.rs
crates/anthill-agents/src/proc_monitor/: mod.rs
crates/anthill-api/: Cargo.toml
crates/anthill-bus/src/: channel.rs  replay.rs
crates/anthill-core/: Cargo.toml  build.rs
crates/anthill-core/src/: config.rs  types.rs
crates/anthill-core/src/proto/: anthill.v1.rs
crates/anthill-db/src/: lib.rs  sled_cache.rs  sqlite.rs
crates/anthill-db/src/migrations/: V1__initial.sql
crates/anthill-prefilter/src/: burst.rs  lib.rs
crates/anthill-queen/: Cargo.toml
crates/anthill-queen/src/behaviour/: mod.rs
crates/anthill-queen/src/behaviour/rules/: mod.rs  t1059_script_exec.rs  t1070_log_tamper.rs  t1071_c2_beacon.rs  t1486_ransomware.rs  t1548_priv_esc.rs
crates/anthill-queen/src/ml/: drift_monitor.rs  model_registry.rs
crates/anthill-soldier/src/actions/: kill.rs  mod.rs  network_block.rs  rollback.rs
crates/anthill-tui/: Cargo.toml
crates/anthill-tui/src/: app.rs  layout.rs  lib.rs
crates/anthill-tui/src/widgets/: agent_status.rs  event_stream.rs
ebpf/src/: anthill.bpf.c
engines/prefilter/: Cargo.toml
engines/prefilter/src/: allowlist.rs  burst.rs  dedup.rs
engines/queen/src/: correlator.rs  lib.rs
engines/queen/src/behaviour/: mod.rs  window_store.rs
engines/queen/src/behaviour/rules/: t1055_injection.rs  t1070_log_tamper.rs
engines/queen/src/ml/: drift_monitor.rs  mod.rs  model_registry.rs
engines/queen/src/sandbox/: gvisor.rs  mod.rs  scheduler.rs
engines/queen/src/signature/: mod.rs
ml/pipeline/: requirements.txt  train.py
platform/linux/agents/src/: lib.rs
platform/linux/agents/src/file_monitor/: mod.rs
platform/linux/agents/src/mem_probe/: mod.rs
platform/linux/agents/src/net_sniffer/: mod.rs
platform/linux/ebpf/: Makefile
response/soldier/: Cargo.toml
response/soldier/src/: forensics.rs  lib.rs  protected.rs  safety.rs
response/soldier/src/actions/: quarantine.rs
storage/: anthill.db
ui/api/src/: grpc.rs  lib.rs
ui/tui/src/: app.rs
ui/tui/src/widgets/: confirm_dialog.rs  mod.rs  threat_list.rs
