[package]
name        = "anthill-bus"
version.workspace = true
edition.workspace = true

[dependencies]
anthill-core   = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
parking_lot    = { workspace = true }
prost          = { workspace = true }
