[package]
name        = "anthill-db"
version.workspace = true
edition.workspace = true

[dependencies]
anthill-core  = { workspace = true }
rusqlite      = { workspace = true }
sled          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }
