[package]
name        = "anthill-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
chrono     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
config     = { workspace = true }
directories = { workspace = true }
prost       = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
