[package]
name        = "anthill-soldier"
version.workspace = true
edition.workspace = true

[dependencies]
anthill-core  = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
uuid          = { version = "1", features = ["v4"] }
libc          = "0.2"
sha2          = { workspace = true }
hex           = { workspace = true }
toml          = { workspace = true }
